refactor(test): :recycle: refactor test import and streams